[ch18171] Fix some layout issues for IE on detail page and nav (#28)
* [ch18171] Fix some layout issues for IE on detail page and nav

* [ch18171] Self closing tag on empty div

--- a/app/styles/components/detail-meta-bloc.less
+++ b/app/styles/components/detail-meta-bloc.less
@@ -28,7 +28,13 @@
 
   &--column {
     &.bold {
-      font-weight: bold;
+      font-family: @font-family-semibold;
+    }
+    &.left {
+      .grid-column(1);
+    }
+    &.right {
+      .grid-column(2);
     }
   }
 
@@ -67,6 +73,7 @@
   }
 
   &--map-image {
+    .grid-column(1);
     background-image: url('https://s3.amazonaws.com/subtext-misc/wrj-map-blank.png');
     background-repeat: no-repeat;
     background-size: cover;
