--- a/app/styles/components/detail-page.less
+++ b/app/styles/components/detail-page.less
@@ -1,4 +1,4 @@
-.metaBlocFormated {
+.metaBlocFormatted {
   padding: 8px 16px;
 }
 
@@ -50,11 +50,11 @@
 
     &-eventTime, &-price, &-cost, &-location, &-location-only, &-attribution,
     &-phone, &-url, &-registrationInfo {
-      .metaBlocFormated;
+      .metaBlocFormatted;
     }
 
     &-address {
-      .metaBlocFormated;
+      .metaBlocFormatted;
 
       a:hover {
         text-decoration: none;
