--- a/app/styles/components/feed-card/source.less
+++ b/app/styles/components/feed-card/source.less
@@ -13,7 +13,12 @@
     .grid-justify-self(start);
   }
 
+  &--left {
+    .grid-column(1);
+  }
+
   &--right {
+    .grid-column(2);
     line-height: 1.0;
     text-transform: capitalize;
   }
